# spe_public

./: README.md
basic_bash/: ex1.md  one_liners.md  sed.md
basic_bash/one_liners/: one_liners.md
basic_cmake/exercise/: CMakeLists.txt  expected.txt  main.c  matmul.F90  runtest.cmake
basic_cmake/step_0/: .readme.md.swp  CMakeLists.txt  readme.md
basic_cmake/step_1/: CMakeLists.txt  readme.md
basic_cmake/step_2/: CMakeLists.txt  readme.md
basic_cmake/step_3/: CMakeLists.txt  readme.md
basic_cmake/step_4/: CMakeLists.txt  readme.md
basic_cmake/step_5/: CMakeLists.txt  readme.md
basic_cmake/step_6/: CMakeLists.txt  readme.md  runtest.cmake
data_structures/: heap_vs_stack_memory.md  playing_with_pointers.md  swap.c
elementary_finite_elements/: assembly.tex  elementary_intro_to_fem.tex  local_shape_funcs.tex
elementary_finite_elements/code/: assemble.py  basis_func.py  main.py  mesh.py  test_suite.py  viewer.py
elementary_finite_elements/theory/: cea_lemma.tex  elementary_intro_to_fem.tex  local_shape_funcs.tex
makefile/: readme.md
makefile/ex1/: Makefile  funcs.c
makefile/ex2/: Makefile
makefile/ex3/: Makefile
makefile/ex4/: Makefile
makefile/ex5/: Makefile  program.c
makefile/ex6/: Makefile  funcs.c  program.c
matrix_vector_mult/c_code/: Makefile  main.c  matrix_tools.c  matrix_tools.h  solver.c  test_solve.c  vector_tools.c  vector_tools.h
my_first_collabiorative_project/: readme.md
my_first_collabiorative_project/figures/: create_repo.tiff
my_first_collaborative_project/: readme.md
(+2 files in other folders)
